--- a/App3/package.json
+++ b/App3/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~9.0.1",
     "@popperjs/core": "^2.3.1",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.14.0",
     "jquery": "^3.5.0",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
